# ComfyUI-OmniVoice_CRT

./: README.md  __init__.py  install_omnivoice_safe.bat  pyproject.toml
py/: model_manager.py  omnivoice_nodes.py
workflows/: omnivoice_basic.json
