[project]
name = "comfyui-omnivoice"
version = "0.1.2"
description = "ComfyUI wrapper nodes for OmniVoice multilingual zero-shot TTS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[project.urls]
Repository = "https://github.com/PGCRT/ComfyUI-OmniVoice_CRT"

[tool.comfy]
PublisherId = "crt"
DisplayName = "ComfyUI-OmniVoice_CRT"
Icon = ""
